--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "矿且",
+    "navigationBarTitleText": "矿小且",
     "navigationBarTextStyle":"black"
   },
   "tabBar": {
